--- a/client/mocks/css/style.css
+++ b/client/mocks/css/style.css
@@ -59,9 +59,6 @@
     --scroll-snap-constraint: mandatory;
   }
   
-  .snap-start {
-    scroll-snap-align: start;
-  }
   
   .no-scrollbar::-webkit-scrollbar {
     display: none;
@@ -73,6 +70,10 @@
   
   .h-contain{
       height: 600px
+  }
+
+  .h-contain-xl{
+      height: 700px
   }
   
   /* Animation CSS */
