visitor property detail page in progress, placed in mocks. image carousel working but not perfected

--- a/client/mocks/css/style.css
+++ b/client/mocks/css/style.css
@@ -75,6 +75,10 @@
   .h-contain-xl{
       height: 700px
   }
+
+  .carouselImg{
+    object-fit: contain;
+  }
   
   /* Animation CSS */
       /* ----------------------------------------------
